@@ -5,6 +5,7 @@ Release 0.21.0 - Unreleased
   BUG FIXES
    HBASE-1791  Timeout in IndexRecordWriter (Bradford Stephens via Andrew
                Purtell)
+   HBASE-1737  Regions unbalanced when adding new node (recommit)
 
   IMPROVEMENTS
    HBASE-1760  Cleanup TODOs in HTable
